force-app/main/default/objects/RE_Route_Based_Costing__c/RE_Route_Based_Costing__c.object-meta.xml
<CustomObject>
    <label>RE Route Based Costing</label>
    <nameField>
        <displayFormat>RBC-{000000000}</displayFormat>
        <label>Route Based Costing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Route Based Costing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>