force-app/main/default/objects/RE_Route_Based_Costing__c/fields/RE_Bio_Loss__c.field-meta.xml
<CustomField>
    <fullName>RE_Bio_Loss__c</fullName>
    <label>RE_Bio_Loss</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>