force-app/main/default/objects/RE_Route_Based_Costing__c/fields/RE_Breakbulk_Premium__c.field-meta.xml
<CustomField>
    <fullName>RE_Breakbulk_Premium__c</fullName>
    <label>RE_Breakbulk_Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>