force-app/main/default/objects/RE_Route_Based_Costing__c/fields/RE_Costprice_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Costprice_Unit__c</fullName>
    <label>RE_Costprice_Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>