force-app/main/default/objects/RE_Route_Based_Costing__c/fields/RE_Port_Charges_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_Port_Charges_Cost__c</fullName>
    <label>RE_Port_Charges_Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>