force-app/main/default/objects/RE_Route_Based_Costing__c/fields/RE_Route_Backbone__c.field-meta.xml
<CustomField>
    <fullName>RE_Route_Backbone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RE Route Backbone</label>
    <referenceTo>RE_Route_Backbone__c</referenceTo>
    <relationshipLabel>RE Route Based Costing</relationshipLabel>
    <relationshipName>RE_Route_Based_Costing</relationshipName>
    <type>Lookup</type>
</CustomField>