force-app/main/default/objects/RE_Route_Based_Costing__c/fields/RE_Storage_Handling_OSP__c.field-meta.xml
<CustomField>
    <fullName>RE_Storage_Handling_OSP__c</fullName>
    <label>RE_Storage_Handling_OSP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>