force-app/main/default/objects/RE_Route_Based_Costing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RE_CO_Steer__c</columns>
    <columns>NAME</columns>
    <columns>RE_Bio_Loss__c</columns>
    <columns>RE_Breakbulk_Premium__c</columns>
    <columns>RE_Costprice_Unit__c</columns>
    <columns>RE_Freight_Pipeline_Charges__c</columns>
    <columns>RE_IsLatest__c</columns>
    <columns>RE_Job_Run_Count__c</columns>
    <columns>RE_Market_Premium__c</columns>
    <columns>RE_MR_Freight_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>